--- a/Python/Strings.ipynb
+++ b/Python/Strings.ipynb
@@ -608,6 +608,209 @@
     "b = a.upper()\n",
     "print(\"After upper:\", b)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5407e6bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The Janet is the best album'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Replace the old substring with the new target substring is the segment has been found in the string\n",
+    "\n",
+    "a = \"The BodyGuard is the best album\"\n",
+    "b = a.replace('BodyGuard', 'Janet')\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5b143289",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the substring in the string. Only the index of the first element of substring in string will be the output\n",
+    "\n",
+    "name = \"The BodyGuard\"\n",
+    "name.find('he')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5e7eb3b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# If substring not in the string, the output will be -1\n",
+    "name.find('Jasdfasdasdf')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfb7fc56",
+   "metadata": {},
+   "source": [
+    "##### Split"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85a322b1",
+   "metadata": {},
+   "source": [
+    "The method Split splits the string at the specified separator, and returns a list.\n",
+    "\n",
+    "**Syntax**\n",
+    "\n",
+    "string.split(separator, maxsplit)\n",
+    "\n",
+    "**Parameters**\n",
+    "\n",
+    "* separator (optional): This is the delimiter at which the string will be split. If not provided, the default separator is any whitespace.\n",
+    "* maxsplit (optional): This specifies the maximum number of splits to perform. If not provided, there is no limit on the number of splits.\n",
+    "\n",
+    "**Return Value:**\n",
+    "\n",
+    "The method returns a list of substrings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "97360c88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['The', 'BodyGuard']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Split the substring into list\n",
+    "name = \"The BodyGuard\"\n",
+    "split_string = (name.split())\n",
+    "split_string"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f057418e",
+   "metadata": {},
+   "source": [
+    "##### RegEx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "727b5f05",
+   "metadata": {},
+   "source": [
+    "In Python, RegEx (short for Regular Expression) is a tool for matching and handling strings.\n",
+    "\n",
+    "This RegEx module provides several functions for working with regular expressions, including search, split, findall, and sub.\n",
+    "\n",
+    "Python provides a built-in module called re, which allows you to work with regular expressions. So we must first input it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "494756ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2a2ef8d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Match found!\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1 = \"The BodyGuard is the best album\"\n",
+    "\n",
+    "# Define the pattern to search for\n",
+    "pattern = r\"Body\"\n",
+    "\n",
+    "# Use the search() function to search for the pattern in the string\n",
+    "result = re.search(pattern, s1)\n",
+    "\n",
+    "# Check if a match was found\n",
+    "if result:\n",
+    "    print(\"Match found!\")\n",
+    "else:\n",
+    "    print(\"Match not found.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb48941c",
+   "metadata": {},
+   "source": [
+    "Regular expressions (RegEx) are patterns used to match and manipulate strings of text. There are several special sequences in RegEx that can be used to match specific characters or patterns.\n",
+    "\n",
+    "| Special Sequence | Meaning                 | \tExample             |\n",
+    "| -----------  | ----------------------- | ----------------------|\n",
+    "| \\d|Matches any digit character (0-9)|\"123\" matches \"\\d\\d\\d\"|\n",
+    "|\\D|Matches any non-digit character|\"hello\" matches \"\\D\\D\\D\\D\\D\"|\n",
+    "|\\w|Matches any word character (a-z, A-Z, 0-9, and _)|\"hello_world\" matches \"\\w\\w\\w\\w\\w\\w\\w\\w\\w\\w\\w\"|\n",
+    "|\\W|Matches any non-word character|\t\"@#$%\" matches \"\\W\\W\\W\\W\"|\n",
+    "|\\s|Matches any whitespace character (space, tab, newline, etc.)|\"hello world\" matches \"\\w\\w\\w\\w\\w\\s\\w\\w\\w\\w\\w\"|\n",
+    "|\\S|Matches any non-whitespace character|\"hello_world\" matches \"\\S\\S\\S\\S\\S\\S\\S\\S\\S\\S\\S\"|\n",
+    "|\\b|Matches the boundary between a word character and a non-word character|\"cat\" matches \"\\bcat\\b\" in \"The cat sat on the mat\"|\n",
+    "|\\B|Matches any position that is not a word boundary|\"cat\" matches \"\\Bcat\\B\" in \"category\" but not in \"The cat sat on the mat\"|\n"
+   ]
   }
  ],
  "metadata": {
