--- a/IBM Data Science/Python for Data Science/Functions.ipynb
+++ b/IBM Data Science/Python for Data Science/Functions.ipynb
@@ -391,7 +391,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -504,7 +504,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -698,7 +698,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
@@ -707,7 +707,7 @@
               "0"
             ]
           },
-          "execution_count": 22,
+          "execution_count": 23,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -734,7 +734,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -839,9 +839,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[10.0, 8.5, 9.5, 7.0, 7.0, 9.5, 9.0, 9.5]\n"
+          ]
+        }
+      ],
       "source": [
         "# Build-in function print()\n",
         "\n",
@@ -858,9 +866,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "70.0"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Use sum() to add every element in a list or tuple together\n",
         "\n",
@@ -876,9 +895,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "8"
+            ]
+          },
+          "execution_count": 5,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Show the length of the list or tuple\n",
         "\n",
@@ -901,9 +931,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "TypeError",
+          "evalue": "'int' object is not iterable",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[6], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#You will see below will return an error as integer alone is not considered while using a function.It either has to be in the form of tuple, list or a set.\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28msum\u001b[39m(\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m)\n",
+            "\u001b[1;31mTypeError\u001b[0m: 'int' object is not iterable"
+          ]
+        }
+      ],
       "source": [
         "#You will see below will return an error as integer alone is not considered while using a function.It either has to be in the form of tuple, list or a set.\n",
         "\n",
@@ -912,9 +954,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The sum of the elements in the tuple (1, 2) is 3.\n"
+          ]
+        }
+      ],
       "source": [
         "# Define a tuple\n",
         "a = (1, 2)\n",
@@ -928,9 +978,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The sum of the elements in the list [1, 2] is 3.\n"
+          ]
+        }
+      ],
       "source": [
         "# Define a list\n",
         "a = [1, 2]\n",
@@ -958,9 +1016,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The BodyGuard 1980\n",
+            "Oldie\n"
+          ]
+        }
+      ],
       "source": [
         "# Function example\n",
         "\n",
@@ -985,7 +1052,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -998,9 +1065,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "1\n",
+            "the man\n",
+            "abc\n"
+          ]
+        }
+      ],
       "source": [
         "# Implement the printlist function\n",
         "\n",
@@ -1023,9 +1101,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'String matched'"
+            ]
+          },
+          "execution_count": 12,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#Compare Two Strings Directly using in operator\n",
         "# add string\n",
@@ -1054,9 +1143,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "String Matched\n"
+          ]
+        }
+      ],
       "source": [
         "#Compare two strings using == operator and function\n",
         "def compareStrings(x, y):\n",
@@ -1101,9 +1199,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The Frequency of words is: {'Mary': 6, 'had': 2, 'a': 2, 'little': 3, 'lamb': 3, 'Little': 1, 'lamb,': 1, 'lamb.Its': 1, 'fleece': 1, 'was': 2, 'white': 1, 'as': 1, 'snow': 1, 'And': 1, 'everywhere': 1, 'that': 2, 'went': 3, 'went,': 1, 'Everywhere': 1, 'The': 1, 'sure': 1, 'to': 1, 'go': 1}\n"
+          ]
+        }
+      ],
       "source": [
         "# Python Program to Count words in a String using Dictionary\n",
         "def freq(string):\n",
@@ -1152,7 +1258,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1168,9 +1274,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "this album sucks it's rating is 4\n",
+            "this album is good its rating is 10\n"
+          ]
+        }
+      ],
       "source": [
         "# Test the value with default value and with input\n",
         "\n",
@@ -1202,9 +1317,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The BodyGuard is an album\n"
+          ]
+        }
+      ],
       "source": [
         "# Example of global variable\n",
         "\n",
@@ -1231,9 +1354,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The BodyGuard is an album\n",
+            "Thriller is an album\n"
+          ]
+        }
+      ],
       "source": [
         "album = \"The BodyGuard\"\n",
         "\n",
@@ -1262,9 +1394,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "AC/DC's rating is: 10.0\n",
+            "Deep Purple's rating is: 0.0\n",
+            "My favourite band is: AC/DC\n"
+          ]
+        }
+      ],
       "source": [
         "# Example of global variable\n",
         "\n",
@@ -1290,9 +1432,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "AC/DC's rating is:  10.0\n",
+            "Deep Purple's rating is:  0.0\n"
+          ]
+        },
+        {
+          "ename": "NameError",
+          "evalue": "name 'myFavouriteBand' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[22], line 16\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAC/DC\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ms rating is: \u001b[39m\u001b[38;5;124m\"\u001b[39m, getBandRating(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAC/DC\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDeep Purple\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ms rating is: \u001b[39m\u001b[38;5;124m\"\u001b[39m, getBandRating(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDeep Purple\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m---> 16\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMy favourite band is\u001b[39m\u001b[38;5;124m\"\u001b[39m, myFavouriteBand)\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'myFavouriteBand' is not defined"
+          ]
+        }
+      ],
       "source": [
         "# Deleting the variable \"myFavouriteBand\" from the previous example to demonstrate an example of a local variable \n",
         "\n",
@@ -1321,9 +1483,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "AC/DC's rating is: 0.0\n",
+            "Deep Purple's rating is:  10.0\n",
+            "My favourite band is: AC/DC\n"
+          ]
+        }
+      ],
       "source": [
         "# Example of global variable and local variable with the same name\n",
         "\n",
@@ -1358,9 +1530,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "No of arguments: 3\n",
+            "Horsefeather\n",
+            "Adonis\n",
+            "Bone\n",
+            "No of arguments: 4\n",
+            "Sidecar\n",
+            "Long Island\n",
+            "Mudslide\n",
+            "Carriage\n"
+          ]
+        }
+      ],
       "source": [
         "def printAll(*args): # All the arguments are 'packed' into args which can be treated like a tuple\n",
         "    print(\"No of arguments:\", len(args)) \n",
@@ -1381,9 +1569,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Country : Canada\n",
+            "Province : Ontario\n",
+            "City : Toronto\n"
+          ]
+        }
+      ],
       "source": [
         "def printDictionary(**args):\n",
         "    for key in args:\n",
@@ -1402,9 +1600,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['One', 'Two', 'Three', 'Four']"
+            ]
+          },
+          "execution_count": 28,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "def addItems(list):\n",
         "    list.append(\"Three\")\n",
@@ -1443,11 +1652,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "2.0"
+            ]
+          },
+          "execution_count": 31,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Write your code below and press Shift+Enter to execute\n"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "def divNum (a,b):\n",
+        "    return(a / b)\n",
+        "\n",
+        "divNum(4,2)"
       ]
     },
     {
@@ -1481,7 +1705,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1500,11 +1724,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "3\n",
+            "12\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write your code below and comment the text then press Shift+Enter to execute\n"
+        "# Write your code below and comment the text then press Shift+Enter to execute\n",
+        "# Yes it can be used for both integers and strings\n",
+        "print(con(1,2))\n",
+        "print(con('1','2'))"
       ]
     },
     {
@@ -1538,11 +1774,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 1, 2]\n",
+            "[1, 2, 3, 'b']\n",
+            "(1, 2, 'Yoh', 'Ayo')\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write your code below and comment the text then press Shift+Enter to execute\n"
+        "# Write your code below and comment the text then press Shift+Enter to execute\n",
+        "# Yes, it can be used for both lists and tuples\n",
+        "\n",
+        "myList = [1, 2]\n",
+        "myList2 = [3, 'b']\n",
+        "myTuple = (1, 2)\n",
+        "myTuple2 = (\"Yoh\", \"Ayo\")\n",
+        "\n",
+        "print(con(myList, myList))\n",
+        "print(con(myList, myList2))\n",
+        "print(con(myTuple, myTuple2))"
       ]
     },
     {
@@ -1570,11 +1826,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "execution_count": 44,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Write your code below and press Shift+Enter to execute\n"
+        "testDict = {'a': 1, 'b': 2, 'c': 3}\n",
+        "# Get the value associated with key 'b'\n",
+        "testDict['b']"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 45,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "execution_count": 45,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Write your code below and press Shift+Enter to execute\n",
+        "def wordCount(myWord, string):\n",
+        "    words = string.split()\n",
+        "    wordDict = {}\n",
+        "    for word in words:\n",
+        "        wordDict[word] = words.count(word)\n",
+        "    return wordDict[myWord]\n",
+        "\n",
+        "wordCount('little', \"Mary had a little lamb Little lamb, little lamb Mary had a little lamb.Its fleece was white as snow And everywhere that Mary went Mary went, Mary went Everywhere that Mary went The lamb was sure to go\")"
       ]
     },
     {
