--- a/IBM Data Science/Python for Data Science/Functions.ipynb
+++ b/IBM Data Science/Python for Data Science/Functions.ipynb
@@ -1875,6 +1875,29 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 59,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[1, 3, 2]"
+            ]
+          },
+          "execution_count": 59,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "L=[1,3,2]\n",
+        "W = [1,3,2]\n",
+        "sorted(L) \n",
+        "L"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
