--- a/IBM Data Science/Python for Data Science/Exception_Handling.ipynb
+++ b/IBM Data Science/Python for Data Science/Exception_Handling.ipynb
@@ -630,12 +630,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7f608eff-0fc6-4935-bf8f-d08a9ff5b56d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: Cannot divide by zero.\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "#Type your code here\n",
+    "\n",
     "def safe_divide(numerator,denominator):\n",
     "    try:\n",
     "        result = numerator / denominator\n",
@@ -724,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8bd1ae5a-e87f-4c34-9fd3-940af3718be9",
    "metadata": {},
    "outputs": [
@@ -732,22 +742,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The square root of -4 is (1.2246467991473532e-16+2j)\n"
+      "Invalid input! Please enter a positive integer.\n"
      ]
     }
    ],
    "source": [
     "#Type your code here\n",
-    "def sqrt(value):\n",
-    "    value = value ** 0.5\n",
-    "    return value\n",
+    "import math\n",
     "\n",
-    "try:\n",
-    "    number1 = int(input(\"Enter an integer value: \"))\n",
-    "    root = sqrt(a)\n",
-    "    print(\"The square root of\", a, \"is\", b)\n",
-    "except ValueError:\n",
-    "    print(\"Invalid input! Please enter a valid integer.\")\n"
+    "def root_function(number1):\n",
+    "    try:\n",
+    "        result = math.sqrt(number1)\n",
+    "        print(\"The square root of\", number1, \"is\", result)\n",
+    "    except ValueError:\n",
+    "        print(\"Invalid input! Please enter a positive integer.\")\n",
+    "\n",
+    "  \n",
+    "number1 = int(input(\"Enter an integer value: \"))\n",
+    "root_function(number1)"
    ]
   },
   {
@@ -826,7 +838,15 @@
    "execution_count": null,
    "id": "e656ac77-3f3b-418b-ad57-049a019165aa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result: 0.8\n"
+     ]
+    }
+   ],
    "source": [
     "#Type your code here\n",
     "def complex_calculation(num):\n",
